--- a/src/app/breakage-card/breakage-card.component.html
+++ b/src/app/breakage-card/breakage-card.component.html
@@ -1,5 +1,5 @@
-<md-card class="breakage-card" *ngFor="let item of breakages">
-  <md-card-content>
+<mat-card class="breakage-card" *ngFor="let item of breakages">
+  <mat-card-content>
     <div fxLayout="row" fxLayout.xs="column" fxFlex>
       <div class="breakage-card-left">
         <ul class="breakage-card-list">
@@ -35,10 +35,10 @@
 
     </div>
 
-  </md-card-content>
+  </mat-card-content>
     <hr />
-    <md-card-actions >
-      <button md-button color="warn" (click)="openDialog(item)">{{buttonText}}</button>
-    </md-card-actions>
+    <mat-card-actions >
+      <button mat-button color="warn" (click)="openDialog(item)">{{buttonText}}</button>
+    </mat-card-actions>
 
-</md-card>
+</mat-card>
