--- a/src/app/confirm-removal.html
+++ b/src/app/confirm-removal.html
@@ -1,9 +1,9 @@
-<h1 md-dialog-title> Confirm Removal </h1>
+<h1 mat-dialog-title> Confirm Removal </h1>
 
-<md-dialog-content>
+<mat-dialog-content>
   Are you sure you want to remove this breakage?
   <br /> This does not mark it as fixed instead removes a breakage if it was incorrectly entered
-</md-dialog-content>
-<md-dialog-actions>
-  <button md-button md-dialog-close>Cancel</button>
-</md-dialog-actions>
+</mat-dialog-content>
+<mat-dialog-actions>
+  <button mat-button mat-dialog-close>Cancel</button>
+</mat-dialog-actions>
