--- a/src/app/safety-procedures/safety-procedures.component.html
+++ b/src/app/safety-procedures/safety-procedures.component.html
@@ -1,27 +1,27 @@
-<md-card>
-  
-  <md-tab-group>
-    <md-tab label="Incident Form">
-      <md-list>
-        <md-list-item>
-          <a md-list-item href="https://goo.gl/1Epo9z" target="_blank">
-            <md-icon md-list-icon>assignment</md-icon>
+<mat-card>
+
+  <mat-tab-group>
+    <mat-tab label="Incident Form">
+      <mat-list>
+        <mat-list-item>
+          <a mat-list-item href="https://goo.gl/1Epo9z" target="_blank">
+            <mat-icon mat-list-icon>assignment</mat-icon>
             Accident, Near Miss or Incident Reporting Form
           </a>
-        </md-list-item>
-      </md-list>
-    </md-tab>
-    <md-tab label="Documents">
-      <md-list>
-        <h3 md-subheader>Health and Safety Documents</h3>
-        <md-list-item *ngFor="let link of links">
-          <a md-list-item href="{{link.a}}" target="_blank">
-            <md-icon md-list-icon>insert_drive_file</md-icon>
+        </mat-list-item>
+      </mat-list>
+    </mat-tab>
+    <mat-tab label="Documents">
+      <mat-list>
+        <h3 mat-subheader>Health and Safety Documents</h3>
+        <mat-list-item *ngFor="let link of links">
+          <a mat-list-item href="{{link.a}}" target="_blank">
+            <mat-icon mat-list-icon>insert_drive_file</mat-icon>
             {{link.text}}
           </a>
-        </md-list-item>
-      </md-list>
-    </md-tab>
-  </md-tab-group>
+        </mat-list-item>
+      </mat-list>
+    </mat-tab>
+  </mat-tab-group>
 
-</md-card>
+</mat-card>
