refactor not required code

--- a/src/app/report-usage/report-usage.component.html
+++ b/src/app/report-usage/report-usage.component.html
@@ -47,5 +47,5 @@
 
   </mat-card-content>
 </mat-card>
-<last-uses></last-uses>
-<app-usage-graphs></app-usage-graphs>
+<last-uses  fxLayout="row" fxLayout.lt-md="column"></last-uses>
+<app-usage-graphs fxLayout="row" fxLayout.lt-md="column"></app-usage-graphs>
