move to numbers rather than strings

--- a/src/app/breakage-card/breakage-card.component.html
+++ b/src/app/breakage-card/breakage-card.component.html
@@ -4,7 +4,7 @@
       <div class="breakage-card-left">
         <ul class="breakage-card-list">
           <li>
-            Boat: {{item.boatID}}
+            {{getBoatName(item.boatID)}}
           </li>
           <li>
             {{item.importance}}
