fix use of importance convertor

--- a/src/app/breakage-card/breakage-card.component.html
+++ b/src/app/breakage-card/breakage-card.component.html
@@ -7,7 +7,7 @@
             {{getBoatName(item.boatID)}}
           </li>
           <li>
-            {{item.importance}}
+            {{getImportanceName(item.importance)}}
           </li>
           <li *ngIf="item.part">
             Part: {{item.part}}
