move safety doc links to firestore

--- a/src/app/safety-procedures/safety-procedures.component.html
+++ b/src/app/safety-procedures/safety-procedures.component.html
@@ -15,9 +15,9 @@
       <mat-list>
         <h3 mat-subheader>Health and Safety Documents</h3>
         <mat-list-item *ngFor="let link of links">
-          <a mat-list-item href="{{link.a}}" target="_blank">
+          <a mat-list-item href="{{link.url}}" target="_blank">
             <mat-icon mat-list-icon>insert_drive_file</mat-icon>
-            {{link.text}}
+            {{link.title}}
           </a>
         </mat-list-item>
       </mat-list>
