rename: more generic names

--- a/src/app/usage-graphs/usage-graphs.component.html
+++ b/src/app/usage-graphs/usage-graphs.component.html
@@ -2,6 +2,6 @@
 <mat-card fxFlex="100" fxFlex.lt-md="98" class="card_top_pad">
   <mat-card-title>Total Usage Graph</mat-card-title>
   <mat-card-content>
-    <canvas baseChart [datasets]="barChartData" [colors]="colors" [labels]="barChartLabels" [options]="barChartOptions" [legend]="barChartLegend" [chartType]="barChartType"></canvas>
+    <canvas baseChart [datasets]="chartData" [colors]="colors" [labels]="chartLabels" [options]="chartOptions" [legend]="chartLegend" [chartType]="chartType"></canvas>
   </mat-card-content>
 </mat-card>
