--- a/src/app/usage-graphs/usage-graphs.component.html
+++ b/src/app/usage-graphs/usage-graphs.component.html
@@ -1,6 +1,5 @@
-
 <mat-card fxFlex="100" fxFlex.lt-md="98" class="card_top_pad">
-  <mat-card-title>Total Usage Graph</mat-card-title>
+  <mat-card-title>{{chartTitle}}</mat-card-title>
   <mat-card-content>
     <canvas baseChart [datasets]="chartData" [colors]="colors" [labels]="chartLabels" [options]="chartOptions" [legend]="chartLegend" [chartType]="chartType"></canvas>
   </mat-card-content>
