--- a/src/app/breakage-card/breakage-card.component.html
+++ b/src/app/breakage-card/breakage-card.component.html
@@ -1,4 +1,7 @@
-<mat-card class="breakage-card" *ngFor="let item of breakages">
+<mat-card [style.backgroundColor]="getBGColour(item.importance)" class="breakage-card" *ngFor="let item of breakages">
+  <mat-card-header  >
+    <mat-card-title>{{getBoatName(item.boatID)}}</mat-card-title>
+  </mat-card-header>
   <mat-card-content>
     <div fxLayout="row" fxLayout.xs="column" fxFlex>
       <div class="breakage-card-left">
@@ -36,7 +39,6 @@
     </div>
 
   </mat-card-content>
-    <hr />
     <mat-card-actions >
       <button mat-button color="warn" (click)="openDialog(item)">{{buttonText}}</button>
     </mat-card-actions>
