--- a/src/app/last-uses/last-uses.component.html
+++ b/src/app/last-uses/last-uses.component.html
@@ -3,7 +3,7 @@
   <mat-card-content>
     <mat-list>
       <mat-list-item *ngFor="let u of usage">
-        <img matListAvatar src="assets/images/boat_{{u.boatID}}.png" alt={{getBoatName(u.boatID)}}>
+        <img matListAvatar src="assets/images/boat_{{u.boatID}}.webp" alt={{getBoatName(u.boatID)}}>
         <h3 matLine> {{getBoatName(u.boatID)}} </h3>
         <p matLine>
           <span mat-line>{{u.duration}} hours</span>
