--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,6 +32,14 @@
           {{routeLink.label}}
       </a>
     </mat-nav-list>
+    <mat-list style="position: absolute; bottom: 15px;">
+      <a style="text-decoration: none;" href="https://laserflash.tk/" mat-list-item>
+      ©2017 BrynTBennett
+    </a>
+      <a style="text-decoration: none;" href="https://github.com/LaserFlash/WYST-Maintenance" mat-list-item>
+      <img width="32" width="32" src="https://unpkg.com/simple-icons@latest/icons/github.svg" /> &nbsp; Source Code
+    </a>
+    </mat-list>
     <br/>
     <button mat-button (click)="toggleDark(); sidenav.close()">TOGGLE DARK THEME</button>
   </mat-sidenav>
