--- a/src/app/breakage-card/breakage-card.component.css
+++ b/src/app/breakage-card/breakage-card.component.css
@@ -1,18 +1,29 @@
 .breakage-card {
   margin-top: 10px;
 }
-.breakage-card-left{
+
+.breakage-card-left {
   width: 200px;
 }
+
 .breakage-card-list {
   list-style-type: none;
   padding-left: 0px;
 }
-.breakage-card-details{}
+
+.breakage-card-details {
+  padding-right: 20px;
+}
+
 .remove-button {
   width: 80px;
   height: 100%;
-  display:flex;
+  display: flex;
   align-items: center;
   text-align: center;
+}
+
+.imageDiv {
+  height: 100%;
+  width: 100%;
 }
