Use steeper for sections of form

--- a/src/app/report-issue/report-issue.component.css
+++ b/src/app/report-issue/report-issue.component.css
@@ -5,3 +5,12 @@
 /deep/ .mat-option:hover {
   color: #29b6f6;
 }
+
+/deep/ .mat-vertical-stepper-header{
+  padding-left: 0px !important;
+  padding-right: 0px !important;
+}
+
+/deep/ .mat-vertical-content-container{
+  margin-left: 12px !important;
+}
