--- a/src/app/breakage-card/breakage-card.component.html
+++ b/src/app/breakage-card/breakage-card.component.html
@@ -1,6 +1,6 @@
 <mat-card [style.backgroundColor]="getBGColour(item.importance)" class="breakage-card" *ngFor="let item of breakages">
   <mat-card-header>
-    <img mat-card-avatar src="assets/images/boat_{{item.boatID}}.webp" alt={{getBoatName(item.boatID)}} />
+    <img *ngIf="getBoatName(item.boatID)" mat-card-avatar src="assets/images/boat_{{item.boatID}}.webp" alt={{getBoatName(item.boatID)}} />
     <mat-card-title><b>{{getBoatName(item.boatID)}}</b><br /></mat-card-title>
     <mat-card-subtitle>{{getImportanceName(item.importance)}}</mat-card-subtitle>
   </mat-card-header>
