--- a/src/app/sort-filter-bar/sort-filter-bar.component.html
+++ b/src/app/sort-filter-bar/sort-filter-bar.component.html
@@ -1,29 +1,54 @@
 <mat-card>
-  <span>
-  <button style="width:150px; text-align:left;" mat-button [matMenuTriggerFor]="sort"><mat-icon>sort</mat-icon>{{sortBy}}</button>
-  <mat-menu #sort="matMenu">
-    <button mat-menu-item *ngFor="let sort of sortList" (click)="changeSort(sort)"> {{sort}}</button>
-  </mat-menu>
-  </span>
-  <span>
-  <button mat-button [matMenuTriggerFor]="filter"><mat-icon>filter_list</mat-icon> Filter by Boat</button>
-  <mat-menu #filter="matMenu">
-    <button mat-menu-item *ngFor="let filter of filterList" (click)="addFilter(filter)"> {{filter}} </button>
-  </mat-menu>
-</span>
-  <span>
-<button mat-button [matMenuTriggerFor]="Pfilter"><mat-icon>filter_list</mat-icon> Filter by Part</button>
-<mat-menu #Pfilter="matMenu">
-  <button mat-menu-item *ngFor="let filter of partfilterList" (click)="addPartFilter(filter)"> {{filter}} </button>
-</mat-menu>
-</span>
 
-  <mat-chip-list>
-    <mat-chip *ngFor="let filter of appliedFilters" (click)="addFilter(filter) " selected="true"> {{filter}}
-      <mat-icon style="font-size:16px;height:16px;width:16px;">cancel</mat-icon>
-    </mat-chip>
-    <mat-chip *ngFor="let filter of partappliedFilters" (click)="addPartFilter(filter)" selected="true"> {{filter}}
-      <mat-icon style="font-size:16px;height:16px;width:16px;">cancel</mat-icon>
-    </mat-chip>
-  </mat-chip-list>
+  <div fxLayout='row' fxLayout.lt-lg='column'>
+
+    <div fxLayout='column'>
+      <div fxFlex>
+        <span>
+        <button style="width:150px; text-align:left;" mat-button [matMenuTriggerFor]="sort"><mat-icon>sort</mat-icon>{{sortBy}}</button>
+        <mat-menu #sort="matMenu">
+          <button mat-menu-item *ngFor="let sort of sortList" (click)="changeSort(sort)"> {{sort}}</button>
+        </mat-menu>
+        </span>
+        <span>
+          <button mat-button [matMenuTriggerFor]="filter"><mat-icon>filter_list</mat-icon> Filter by Boat</button>
+          <mat-menu #filter="matMenu">
+            <button mat-menu-item *ngFor="let filter of filterList" (click)="addFilter(filter)"> {{filter}} </button>
+          </mat-menu>
+        </span>
+        <span>
+          <button mat-button [matMenuTriggerFor]="Pfilter"><mat-icon>filter_list</mat-icon> Filter by Part</button>
+          <mat-menu #Pfilter="matMenu">
+            <button mat-menu-item *ngFor="let filter of partfilterList" (click)="addPartFilter(filter)"> {{filter}} </button>
+          </mat-menu>
+        </span>
+      </div>
+      <div fxFlex style="padding-bottom: 8px;">
+        <mat-chip-list>
+          <mat-chip *ngFor="let filter of appliedFilters" (click)="addFilter(filter) " selected="true"> {{filter}}
+            <mat-icon style="font-size:16px;height:16px;width:16px;">cancel</mat-icon>
+          </mat-chip>
+          <mat-chip *ngFor="let filter of partappliedFilters" (click)="addPartFilter(filter)" selected="true"> {{filter}}
+            <mat-icon style="font-size:16px;height:16px;width:16px;">cancel</mat-icon>
+          </mat-chip>
+        </mat-chip-list>
+      </div>
+    </div>
+    <div fxFlex></div>
+    <div fxFlex.lt-lg fxFlex="200px">
+      Between Dates <br />
+      <mat-form-field>
+        <input matInput #startPicker [matDatepicker]="startPicker" [max]="startMaxDate" placeholder="Start Date" disabled (dateInput)="selectStart($event)">
+        <mat-datepicker-toggle matSuffix [for]="startPicker"></mat-datepicker-toggle>
+        <mat-datepicker #startPicker disabled="false"></mat-datepicker>
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput #endPicker [matDatepicker]="endPicker" [max]="endMaxDate" [min]="endMinDate" placeholder="End Date" disabled (dateInput)="selectEnd($event)">
+        <mat-datepicker-toggle matSuffix [for]="endPicker"></mat-datepicker-toggle>
+        <mat-datepicker #endPicker disabled="false"></mat-datepicker>
+      </mat-form-field>
+      <button mat-button type="button" (click)="clearDates()">Clear Dates</button>
+    </div>
+  </div>
+
 </mat-card>
